--- a/index.html
+++ b/index.html
@@ -93,11 +93,6 @@
             font-size: 18px;
             display: none; /* Oculto inicialmente */
         }
-
-        #loadingMessage {
-            color: white;
-            display: none; /* Oculto inicialmente */
-        }
     </style>
 </head>
 <body>
@@ -134,64 +129,56 @@
         <button id="loadButton" onclick="procesarExcel()">Cargar</button>
     </div>
 
-    <div id="loadingMessage">Cargando...</div>
     <div id="successMessage">Carga exitosa de datos desde el archivo WRITE.</div>
     <button id="refreshButton" onclick="refreshPage()">Refrescar</button>
 
+    <!-- Agregar Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+
     <script>
-        let database = {
-            'ABC123': '40.7128° N, 74.0060° W', // Coordenadas de Nueva York
-            'XYZ456': '34.0522° N, 118.2437° W', // Coordenadas de Los Ángeles
-            'DELETE': '51.5074° N, 0.1278° W' // Coordenadas de Londres (ejemplo)
+        // Configuración de Firebase (ya modificada)
+        const firebaseConfig = {
+            apiKey: "AIzaSyBYtnGs_6EtsDmFcg_fsQDfr51bwMlYQp8",
+            authDomain: "mapsite-3ca1a.firebaseapp.com",
+            projectId: "mapsite-3ca1a",
+            storageBucket: "mapsite-3ca1a.appspot.com",
+            messagingSenderId: "594377703312",
+            appId: "1:594377703312:web:6eee3d64cc46affabe3d15",
+            measurementId: "G-TG8FMX0SXC"
         };
 
-        function mostrarBarraBusqueda() {
-            document.getElementById("searchContainer").style.display = "block";
-        }
+        // Inicializar Firebase
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
 
-        function mostrarFormularioIngresar() {
-            document.getElementById("nuevoSiteContainer").style.display = "block";
-        }
-
+        // Obtener datos de Firebase
         function buscarCoordenadas() {
-            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase(); // Convertir a mayúsculas
-
-            if (cadenaAlfanumerica.length === 0) {
-                alert("Por favor, ingrese una cadena alfanumérica.");
-                return;
-            }
-
-            if (cadenaAlfanumerica === "WRITE") {
-                generarExcel();
-                return;
-            }
-
-            if (cadenaAlfanumerica === "READ") {
-                document.getElementById("excelContainer").style.display = "block";
-                return;
-            }
+            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase();
 
             if (cadenaAlfanumerica === "BORRAR") {
-                document.getElementById("eliminarContainer").style.display = "block"; // Mostrar contenedor de eliminar
-                document.getElementById("result").textContent = ''; // Limpiar resultado
-                document.getElementById("mapButton").style.display = "none"; // Ocultar botón de mapa
+                document.getElementById("eliminarContainer").style.display = "block";
                 return;
             }
 
-            if (database[cadenaAlfanumerica]) {
-                const coordenadas = database[cadenaAlfanumerica];
-                document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
-                document.getElementById("mapButton").style.display = "inline-block";
-                document.getElementById("eliminarContainer").style.display = "none"; // Asegurar que no se muestre contenedor de eliminar
-            } else {
-                document.getElementById("result").textContent = 'Coordenadas no encontradas';
-                document.getElementById("mapButton").style.display = "none"; // Ocultar botón de mapa si no se encuentra
-                document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
-            }
+            const ref = database.ref('sites/' + cadenaAlfanumerica);
+
+            ref.once('value').then((snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    document.getElementById("result").textContent = `Coordenadas encontradas: ${data.coordenadas}`;
+                    document.getElementById("mapButton").style.display = "inline-block";
+                } else {
+                    document.getElementById("result").textContent = 'Coordenadas no encontradas';
+                    document.getElementById("mapButton").style.display = "none";
+                }
+            }).catch((error) => {
+                console.error("Error al obtener los datos: ", error);
+            });
         }
 
         function agregarNuevoSite() {
-            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase(); // Convertir a mayúsculas
+            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase();
             const nuevasCoordenadas = document.getElementById("nuevasCoordenadas").value;
 
             if (nuevaCadena.length === 0 || nuevasCoordenadas.length === 0) {
@@ -199,17 +186,17 @@
                 return;
             }
 
-            if (database[nuevaCadena]) {
-                alert('La cadena ya existe en la base de datos');
-                return;
-            }
-
-            database[nuevaCadena] = nuevasCoordenadas;
-            alert("Nuevo site agregado con éxito.");
-
-            document.getElementById("nuevaCadena").value = "";
-            document.getElementById("nuevasCoordenadas").value = "";
-            document.getElementById("nuevoSiteContainer").style.display = "none"; // Ocultar formulario
+            const ref = database.ref('sites/' + nuevaCadena);
+            ref.set({
+                coordenadas: nuevasCoordenadas
+            }).then(() => {
+                alert("Nuevo site agregado con éxito.");
+                document.getElementById("nuevaCadena").value = "";
+                document.getElementById("nuevasCoordenadas").value = "";
+                document.getElementById("nuevoSiteContainer").style.display = "none";
+            }).catch((error) => {
+                console.error("Error al guardar los datos: ", error);
+            });
         }
 
         function eliminarSite() {
@@ -220,13 +207,13 @@
                 return;
             }
 
-            if (database[siteAEliminar]) {
-                delete database[siteAEliminar];
+            const ref = database.ref('sites/' + siteAEliminar);
+            ref.remove().then(() => {
                 alert(`Site ${siteAEliminar} eliminado con éxito.`);
-                document.getElementById("siteAEliminar").value = ""; // Limpiar el campo
-            } else {
-                alert("No se encontró el site para eliminar.");
-            }
+                document.getElementById("siteAEliminar").value = "";
+            }).catch((error) => {
+                console.error("Error al eliminar el site: ", error);
+            });
         }
 
         function abrirMapa() {
@@ -239,68 +226,6 @@
             }
         }
 
-        function generarExcel() {
-            const wb = XLSX.utils.book_new();
-            const wsData = [["Site", "Coordenadas"]];
-
-            for (const [key, value] of Object.entries(database)) {
-                wsData.push([key, value]);
-            }
-
-            const ws = XLSX.utils.aoa_to_sheet(wsData);
-            XLSX.utils.book_append_sheet(wb, ws, "Sites");
-
-            XLSX.writeFile(wb, "coordenadas_sites.xlsx");
-        }
-
-        function procesarExcel() {
-            const fileInput = document.getElementById('inputExcel');
-            const file = fileInput.files[0];
-
-            if (!file) {
-                alert('Por favor, seleccione un archivo WRITE.');
-                return;
-            }
-
-            const reader = new FileReader();
-
-            // Mostrar mensaje de carga
-            document.getElementById('loadingMessage').style.display = 'block';
-
-            reader.onload = function (e) {
-                const data = new Uint8Array(e.target.result);
-                const workbook = XLSX.read(data, { type: 'array' });
-                const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-                const jsonData = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
-
-                let validData = true;
-                jsonData.slice(1).forEach(row => {
-                    const site = row[0];
-                    const coordenadas = row[1];
-
-                    if (!site || !coordenadas) {
-                        validData = false; // Marca como inválido si hay datos faltantes
-                    } else {
-                        database[site.toUpperCase()] = coordenadas;
-                    }
-                });
-
-                // Ocultar mensaje de carga
-                document.getElementById('loadingMessage').style.display = 'none';
-
-                if (!validData) {
-                    alert('Algunos datos en el archivo son inválidos. Asegúrate de que todas las filas tengan un site y coordenadas.');
-                    return;
-                }
-
-                document.getElementById('successMessage').style.display = 'block';
-                document.getElementById('refreshButton').style.display = 'inline-block';
-                document.getElementById('excelContainer').style.display = 'none';
-            };
-
-            reader.readAsArrayBuffer(file);
-        }
-
         function refreshPage() {
             location.reload();
         }
@@ -308,3 +233,4 @@
 
 </body>
 </html>
+
