--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Coordenadas</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -132,12 +134,8 @@
     <div id="successMessage">Carga exitosa de datos desde el archivo WRITE.</div>
     <button id="refreshButton" onclick="refreshPage()">Refrescar</button>
 
-    <!-- Agregar Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-
     <script>
-        // Configuración de Firebase (ya modificada)
+        // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyBYtnGs_6EtsDmFcg_fsQDfr51bwMlYQp8",
             authDomain: "mapsite-3ca1a.firebaseapp.com",
@@ -149,34 +147,42 @@
         };
 
         // Inicializar Firebase
-        firebase.initializeApp(firebaseConfig);
+        const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
-        // Obtener datos de Firebase
+        function mostrarBarraBusqueda() {
+            document.getElementById("searchContainer").style.display = "block";
+        }
+
+        function mostrarFormularioIngresar() {
+            document.getElementById("nuevoSiteContainer").style.display = "block";
+        }
+
+        // Buscar coordenadas desde Firebase
         function buscarCoordenadas() {
             const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase();
 
-            if (cadenaAlfanumerica === "BORRAR") {
-                document.getElementById("eliminarContainer").style.display = "block";
+            if (cadenaAlfanumerica.length === 0) {
+                alert("Por favor, ingrese una cadena alfanumérica.");
                 return;
             }
 
-            const ref = database.ref('sites/' + cadenaAlfanumerica);
-
-            ref.once('value').then((snapshot) => {
-                const data = snapshot.val();
-                if (data) {
-                    document.getElementById("result").textContent = `Coordenadas encontradas: ${data.coordenadas}`;
+            const siteRef = firebase.database().ref('sites/' + cadenaAlfanumerica);
+            siteRef.once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    const coordenadas = snapshot.val().coordenadas;
+                    document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
                     document.getElementById("mapButton").style.display = "inline-block";
                 } else {
                     document.getElementById("result").textContent = 'Coordenadas no encontradas';
                     document.getElementById("mapButton").style.display = "none";
                 }
             }).catch((error) => {
-                console.error("Error al obtener los datos: ", error);
+                alert("Error al buscar las coordenadas: " + error.message);
             });
         }
 
+        // Agregar un nuevo site
         function agregarNuevoSite() {
             const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase();
             const nuevasCoordenadas = document.getElementById("nuevasCoordenadas").value;
@@ -186,16 +192,21 @@
                 return;
             }
 
-            const ref = database.ref('sites/' + nuevaCadena);
-            ref.set({
-                coordenadas: nuevasCoordenadas
-            }).then(() => {
-                alert("Nuevo site agregado con éxito.");
-                document.getElementById("nuevaCadena").value = "";
-                document.getElementById("nuevasCoordenadas").value = "";
-                document.getElementById("nuevoSiteContainer").style.display = "none";
-            }).catch((error) => {
-                console.error("Error al guardar los datos: ", error);
+            const siteRef = firebase.database().ref('sites/' + nuevaCadena);
+            siteRef.once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    alert('La cadena ya existe en la base de datos');
+                } else {
+                    siteRef.set({
+                        coordenadas: nuevasCoordenadas
+                    }).then(() => {
+                        alert("Nuevo site agregado con éxito.");
+                        document.getElementById("nuevaCadena").value = "";
+                        document.getElementById("nuevasCoordenadas").value = "";
+                    }).catch((error) => {
+                        alert("Error al guardar el site: " + error.message);
+                    });
+                }
             });
         }
 
@@ -207,12 +218,18 @@
                 return;
             }
 
-            const ref = database.ref('sites/' + siteAEliminar);
-            ref.remove().then(() => {
-                alert(`Site ${siteAEliminar} eliminado con éxito.`);
-                document.getElementById("siteAEliminar").value = "";
+            firebase.database().ref('sites/' + siteAEliminar).once('value').then((snapshot) => {
+                if (snapshot.exists()) {
+                    firebase.database().ref('sites/' + siteAEliminar).remove()
+                    .then(() => {
+                        alert(`Site ${siteAEliminar} eliminado con éxito.`);
+                        document.getElementById("siteAEliminar").value = "";
+                    });
+                } else {
+                    alert("No se encontró el site para eliminar.");
+                }
             }).catch((error) => {
-                console.error("Error al eliminar el site: ", error);
+                alert("Error al eliminar el site: " + error.message);
             });
         }
 
@@ -221,13 +238,8 @@
             if (coordenadas) {
                 const lat = coordenadas[0];
                 const lng = coordenadas[1];
-                const url = `https://www.google.com/maps?q=${lat},${lng}`;
-                window.open(url, '_blank');
+                window.open(`https://www.google.com/maps?q=${lat},${lng}`);
             }
-        }
-
-        function refreshPage() {
-            location.reload();
         }
     </script>
 
