--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Coordenadas</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
             margin-top: 20px;
         }
 
-        #searchInput, #nuevaCadena, #siteAEliminar {
+        #searchInput, #nuevaCadena, #siteAEliminar, #nuevasCoordenadas {
             padding: 10px;
             font-size: 16px;
             width: 200px;
@@ -143,15 +143,12 @@
             storageBucket: "mapsite-3ca1a.appspot.com",
             messagingSenderId: "594377703312",
             appId: "1:594377703312:web:6eee3d64cc46affabe3d15",
-            measurementId: "G-TG8FMX0SXC",
-            databaseURL: "https://mapsite-3ca1a-default-rtdb.firebaseio.com" // Asegúrate de tener la URL de la base de datos
+            measurementId: "G-TG8FMX0SXC"
         };
 
         // Inicializar Firebase
         const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database(); // Usando la nueva forma de inicializar la base de datos
-
-        // Funciones de la aplicación
+        const database = firebase.database();
 
         function mostrarBarraBusqueda() {
             document.getElementById("searchContainer").style.display = "block";
@@ -161,20 +158,16 @@
             document.getElementById("nuevoSiteContainer").style.display = "block";
         }
 
+        // Buscar coordenadas desde Firebase
         function buscarCoordenadas() {
-            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase(); // Convertir a mayúsculas
+            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase();
 
             if (cadenaAlfanumerica.length === 0) {
                 alert("Por favor, ingrese una cadena alfanumérica.");
                 return;
             }
 
-            if (cadenaAlfanumerica === "BORRAR") {
-                document.getElementById("eliminarContainer").style.display = "block"; // Mostrar contenedor de eliminar
-                return;
-            }
-
-            const siteRef = database.ref('sites/' + cadenaAlfanumerica);
+            const siteRef = firebase.database().ref('sites/emplazamientos/' + cadenaAlfanumerica);
             siteRef.once('value').then((snapshot) => {
                 if (snapshot.exists()) {
                     const coordenadas = snapshot.val().coordenadas;
@@ -182,14 +175,16 @@
                     document.getElementById("mapButton").style.display = "inline-block";
                 } else {
                     document.getElementById("result").textContent = 'Coordenadas no encontradas';
-                    document.getElementById("mapButton").style.display = "none"; // Ocultar botón de mapa si no se encuentra
-                    document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
+                    document.getElementById("mapButton").style.display = "none";
                 }
+            }).catch((error) => {
+                alert("Error al buscar las coordenadas: " + error.message);
             });
         }
 
+        // Agregar un nuevo site
         function agregarNuevoSite() {
-            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase(); // Convertir a mayúsculas
+            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase();
             const nuevasCoordenadas = document.getElementById("nuevasCoordenadas").value;
 
             if (nuevaCadena.length === 0 || nuevasCoordenadas.length === 0) {
@@ -197,25 +192,21 @@
                 return;
             }
 
-            const siteRef = database.ref('sites/' + nuevaCadena);
-            siteRef.once('value', (snapshot) => {
+            const siteRef = firebase.database().ref('sites/emplazamientos/' + nuevaCadena);
+            siteRef.once('value').then((snapshot) => {
                 if (snapshot.exists()) {
                     alert('La cadena ya existe en la base de datos');
                 } else {
                     siteRef.set({
-                        coordenadas: nuevasCoordenadas
-                    }, (error) => {
-                        if (error) {
-                            alert("Error al guardar en la base de datos.");
-                        } else {
-                            alert("Nuevo site agregado con éxito.");
-                        }
+                        coordenadas: nuevasCoordenadas,
+                        sites: nuevaCadena
+                    }).then(() => {
+                        alert("Nuevo site agregado con éxito.");
+                        document.getElementById("nuevaCadena").value = "";
+                        document.getElementById("nuevasCoordenadas").value = "";
+                    }).catch((error) => {
+                        alert("Error al guardar el site: " + error.message);
                     });
-
-                    // Limpiar campos
-                    document.getElementById("nuevaCadena").value = "";
-                    document.getElementById("nuevasCoordenadas").value = "";
-                    document.getElementById("nuevoSiteContainer").style.display = "none"; // Ocultar formulario
                 }
             });
         }
@@ -228,36 +219,37 @@
                 return;
             }
 
-            const siteRef = database.ref('sites/' + siteAEliminar);
-            siteRef.once('value').then((snapshot) => {
+            firebase.database().ref('sites/emplazamientos/' + siteAEliminar).once('value').then((snapshot) => {
                 if (snapshot.exists()) {
-                    siteRef.remove().then(() => {
-                        alert("Site eliminado con éxito.");
-                        document.getElementById("siteAEliminar").value = ""; // Limpiar campo
-                    }).catch((error) => {
-                        alert("Error al eliminar el site: " + error.message);
+                    firebase.database().ref('sites/emplazamientos/' + siteAEliminar).remove()
+                    .then(() => {
+                        alert(`Site ${siteAEliminar} eliminado con éxito.`);
+                        document.getElementById("siteAEliminar").value = "";
                     });
                 } else {
-                    alert("El site no existe.");
+                    alert("No se encontró el site para eliminar.");
                 }
+            }).catch((error) => {
+                alert("Error al eliminar el site: " + error.message);
             });
         }
 
         function abrirMapa() {
-            // Aquí puedes agregar la lógica para abrir el mapa con las coordenadas
-            alert("Abriendo mapa...");
-        }
-
-        function procesarExcel() {
-            // Aquí va la lógica para procesar archivos Excel
-            alert("Funcionalidad de carga de Excel en desarrollo.");
+            const coordenadas = document.getElementById("result").textContent.match(/[-\d.]+/g);
+            if (coordenadas) {
+                const lat = coordenadas[0];
+                const lng = coordenadas[1];
+                window.open(`https://www.google.com/maps?q=${lat},${lng}`);
+            }
         }
 
         function refreshPage() {
-            window.location.reload(); // Refrescar la página
+            window.location.reload();
         }
     </script>
+
 </body>
 </html>
+
 
 
