--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Coordenadas</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +48,7 @@
             margin-top: 20px;
         }
 
-        #searchInput, #nuevaCadena, #siteAEliminar, #nuevasCoordenadas {
+        #searchInput, #nuevaCadena, #siteAEliminar {
             padding: 10px;
             font-size: 16px;
             width: 200px;
@@ -95,6 +93,11 @@
             font-size: 18px;
             display: none; /* Oculto inicialmente */
         }
+
+        #loadingMessage {
+            color: white;
+            display: none; /* Oculto inicialmente */
+        }
     </style>
 </head>
 <body>
@@ -131,24 +134,16 @@
         <button id="loadButton" onclick="procesarExcel()">Cargar</button>
     </div>
 
+    <div id="loadingMessage">Cargando...</div>
     <div id="successMessage">Carga exitosa de datos desde el archivo WRITE.</div>
     <button id="refreshButton" onclick="refreshPage()">Refrescar</button>
 
     <script>
-        // Configuración de Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyBYtnGs_6EtsDmFcg_fsQDfr51bwMlYQp8",
-            authDomain: "mapsite-3ca1a.firebaseapp.com",
-            projectId: "mapsite-3ca1a",
-            storageBucket: "mapsite-3ca1a.appspot.com",
-            messagingSenderId: "594377703312",
-            appId: "1:594377703312:web:6eee3d64cc46affabe3d15",
-            measurementId: "G-TG8FMX0SXC"
+        let database = {
+            'ABC123': '40.7128° N, 74.0060° W', // Coordenadas de Nueva York
+            'XYZ456': '34.0522° N, 118.2437° W', // Coordenadas de Los Ángeles
+            'DELETE': '51.5074° N, 0.1278° W' // Coordenadas de Londres (ejemplo)
         };
-
-        // Inicializar Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
 
         function mostrarBarraBusqueda() {
             document.getElementById("searchContainer").style.display = "block";
@@ -158,33 +153,39 @@
             document.getElementById("nuevoSiteContainer").style.display = "block";
         }
 
-        // Buscar coordenadas desde Firebase
         function buscarCoordenadas() {
-            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase();
+            const cadenaAlfanumerica = document.getElementById("searchInput").value.toUpperCase(); // Convertir a mayúsculas
 
             if (cadenaAlfanumerica.length === 0) {
                 alert("Por favor, ingrese una cadena alfanumérica.");
                 return;
             }
 
-            const siteRef = firebase.database().ref('datos/emplazamiento/' + cadenaAlfanumerica);
-            siteRef.once('value').then((snapshot) => {
-                if (snapshot.exists()) {
-                    const coordenadas = snapshot.val().coordenadas;
-                    document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
-                    document.getElementById("mapButton").style.display = "inline-block";
-                } else {
-                    document.getElementById("result").textContent = 'Coordenadas no encontradas';
-                    document.getElementById("mapButton").style.display = "none";
-                }
-            }).catch((error) => {
-                alert("Error al buscar las coordenadas: " + error.message);
-            });
+            if (cadenaAlfanumerica === "WRITE") {
+                generarExcel();
+                return;
+            }
+
+            if (cadenaAlfanumerica === "READ") {
+                document.getElementById("excelContainer").style.display = "block";
+                return;
+            }
+
+            if (database[cadenaAlfanumerica]) {
+                const coordenadas = database[cadenaAlfanumerica];
+                document.getElementById("result").textContent = `Coordenadas encontradas: ${coordenadas}`;
+
+                document.getElementById("mapButton").style.display = "inline-block";
+                document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
+            } else {
+                document.getElementById("result").textContent = 'Coordenadas no encontradas';
+                document.getElementById("mapButton").style.display = "none"; // Ocultar botón de mapa si no se encuentra
+                document.getElementById("eliminarContainer").style.display = "none"; // Ocultar contenedor de eliminar
+            }
         }
 
-        // Agregar un nuevo site
         function agregarNuevoSite() {
-            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase();
+            const nuevaCadena = document.getElementById("nuevaCadena").value.toUpperCase(); // Convertir a mayúsculas
             const nuevasCoordenadas = document.getElementById("nuevasCoordenadas").value;
 
             if (nuevaCadena.length === 0 || nuevasCoordenadas.length === 0) {
@@ -192,23 +193,17 @@
                 return;
             }
 
-            const siteRef = firebase.database().ref('datos/emplazamiento/' + nuevaCadena);
-            siteRef.once('value').then((snapshot) => {
-                if (snapshot.exists()) {
-                    alert('La cadena ya existe en la base de datos');
-                } else {
-                    siteRef.set({
-                        coordenadas: nuevasCoordenadas,
-                        sites: nuevaCadena
-                    }).then(() => {
-                        alert("Nuevo site agregado con éxito.");
-                        document.getElementById("nuevaCadena").value = "";
-                        document.getElementById("nuevasCoordenadas").value = "";
-                    }).catch((error) => {
-                        alert("Error al guardar el site: " + error.message);
-                    });
-                }
-            });
+            if (database[nuevaCadena]) {
+                alert('La cadena ya existe en la base de datos');
+                return;
+            }
+
+            database[nuevaCadena] = nuevasCoordenadas;
+            alert("Nuevo site agregado con éxito.");
+
+            document.getElementById("nuevaCadena").value = "";
+            document.getElementById("nuevasCoordenadas").value = "";
+            document.getElementById("nuevoSiteContainer").style.display = "none"; // Ocultar formulario
         }
 
         function eliminarSite() {
@@ -219,19 +214,13 @@
                 return;
             }
 
-            firebase.database().ref('datos/emplazamiento/' + siteAEliminar).once('value').then((snapshot) => {
-                if (snapshot.exists()) {
-                    firebase.database().ref('datos/emplazamiento/' + siteAEliminar).remove()
-                    .then(() => {
-                        alert(`Site ${siteAEliminar} eliminado con éxito.`);
-                        document.getElementById("siteAEliminar").value = "";
-                    });
-                } else {
-                    alert("No se encontró el site para eliminar.");
-                }
-            }).catch((error) => {
-                alert("Error al eliminar el site: " + error.message);
-            });
+            if (database[siteAEliminar]) {
+                delete database[siteAEliminar];
+                alert(`Site ${siteAEliminar} eliminado con éxito.`);
+                document.getElementById("siteAEliminar").value = ""; // Limpiar el campo
+            } else {
+                alert("No se encontró el site para eliminar.");
+            }
         }
 
         function abrirMapa() {
@@ -239,12 +228,75 @@
             if (coordenadas) {
                 const lat = coordenadas[0];
                 const lng = coordenadas[1];
-                window.open(`https://www.google.com/maps?q=${lat},${lng}`);
+                const url = `https://www.google.com/maps?q=${lat},${lng}`;
+                window.open(url, '_blank');
             }
         }
 
+        function generarExcel() {
+            const wb = XLSX.utils.book_new();
+            const wsData = [["Site", "Coordenadas"]];
+
+            for (const [key, value] of Object.entries(database)) {
+                wsData.push([key, value]);
+            }
+
+            const ws = XLSX.utils.aoa_to_sheet(wsData);
+            XLSX.utils.book_append_sheet(wb, ws, "Sites");
+
+            XLSX.writeFile(wb, "coordenadas_sites.xlsx");
+        }
+
+        function procesarExcel() {
+            const fileInput = document.getElementById('inputExcel');
+            const file = fileInput.files[0];
+
+            if (!file) {
+                alert('Por favor, seleccione un archivo WRITE.');
+                return;
+            }
+
+            const reader = new FileReader();
+
+            // Mostrar mensaje de carga
+            document.getElementById('loadingMessage').style.display = 'block';
+
+            reader.onload = function (e) {
+                const data = new Uint8Array(e.target.result);
+                const workbook = XLSX.read(data, { type: 'array' });
+                const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
+                const jsonData = XLSX.utils.sheet_to_json(firstSheet, { header: 1 });
+
+                let validData = true;
+                jsonData.slice(1).forEach(row => {
+                    const site = row[0];
+                    const coordenadas = row[1];
+
+                    if (!site || !coordenadas) {
+                        validData = false; // Marca como inválido si hay datos faltantes
+                    } else {
+                        database[site.toUpperCase()] = coordenadas;
+                    }
+                });
+
+                // Ocultar mensaje de carga
+                document.getElementById('loadingMessage').style.display = 'none';
+
+                if (!validData) {
+                    alert('Algunos datos en el archivo son inválidos. Asegúrate de que todas las filas tengan un site y coordenadas.');
+                    return;
+                }
+
+                document.getElementById('successMessage').style.display = 'block';
+                document.getElementById('refreshButton').style.display = 'inline-block';
+                document.getElementById('excelContainer').style.display = 'none';
+            };
+
+            reader.readAsArrayBuffer(file);
+        }
+
         function refreshPage() {
-            window.location.reload();
+            location.reload();
         }
     </script>
 
