--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@
             reader.readAsArrayBuffer(file);
         }
     </script>
+{
+  "rules": {
+    ".read": "auth != null",
+    ".write": "auth != null"
+  }
+}
 
 </body>
 </html>
